@@ -18,6 +18,7 @@
 
 package org.apache.skywalking.apm.commons.datacarrier.consumer;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.concurrent.locks.ReentrantLock;
 import org.apache.skywalking.apm.commons.datacarrier.buffer.Channels;
 
@@ -58,12 +59,16 @@ public class ConsumeDriver<T> implements IDriver {
 
     private IConsumer<T> getNewConsumerInstance(Class<? extends IConsumer<T>> consumerClass) {
         try {
-            IConsumer<T> inst = consumerClass.newInstance();
+            IConsumer<T> inst = consumerClass.getDeclaredConstructor().newInstance();
             inst.init();
             return inst;
         } catch (InstantiationException e) {
             throw new ConsumerCannotBeCreatedException(e);
         } catch (IllegalAccessException e) {
+            throw new ConsumerCannotBeCreatedException(e);
+        } catch (NoSuchMethodException e) {
+            throw new ConsumerCannotBeCreatedException(e);
+        } catch (InvocationTargetException e) {
             throw new ConsumerCannotBeCreatedException(e);
         }
     }
